--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Images</string>
+    <string name="link_to_image">https://vk.cc/4RAj7W</string>
+    <string name="enetered_URL">Введите URL</string>
+    <string name="ok">ok</string>
+    <string name="cancel">Отмена</string>
 </resources>
