--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="enetered_URL">Введите URL</string>
     <string name="ok">ok</string>
     <string name="cancel">Отмена</string>
+    <string name="preview">preview</string>
 </resources>
